--- a/lesson14/index.html
+++ b/lesson14/index.html
@@ -10,6 +10,7 @@
         <a href="index1.html">Resume</a>
         <a href="index2.html">Projects</a>
     </div>
+    
 
 </head>
 <body>
@@ -52,3 +53,7 @@
     </footer>
 </body>
 </html>
+
+
+
+<!--какойто комент :)-->
